UPDATES checkout to use FORM component

--- a/src/app/shared/billing-account-form/billing-account-form.component.html
+++ b/src/app/shared/billing-account-form/billing-account-form.component.html
@@ -59,32 +59,25 @@
                             </li>
                         </ul>
                     </div>
-                }  
+                }
                 <input id="phoneNumber" formControlName="telephoneNumber" name="phoneNumber" type="text" [ngClass]="billingForm.get('telephoneNumber')?.errors?.['invalidPhoneNumber'] == true ? 'border-red-600' : 'border-gray-300'" class="mb-2 bg-gray-50 border text-gray-900 text-sm rounded-r-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-            </div>     
+            </div>
         </div>
     </div>
     <div class="flex w-full justify-end col-span-2">
-        @if(this.billingForm.invalid == true){
-            <button disabled type="button"  (click)="createBilling()" class="m-2 cursor-not-allowed flex w-fit justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
-                @if(is_create==true){
-                    {{ 'BILLING._add' | translate }}
-                } @else{
-                    {{ 'BILLING._update' | translate }}
-                }
+        @if(is_create){
+            <button type="button" (click)="createBilling()"
+                    [disabled]="!billingForm.valid" [ngClass]="!billingForm.valid ? 'opacity-50' : 'hover:bg-primary-50'"
+                    class="m-2 flex w-fit justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-primary-100 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
+                {{ 'BILLING._add' | translate }}
             </button>
-        } @else{
-            @if(is_create==true){
-                <button type="button"  (click)="createBilling()" class="m-2 flex w-fit justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
-                    {{ 'BILLING._add' | translate }}
-                </button>
-            } @else {
-                <button (click)="updateBilling()" class="m-2 flex w-fit justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
-                    {{ 'BILLING._update' | translate }}
-                </button>
-            }
+        } @else {
+            <button (click)="updateBilling()"
+                    [disabled]="!billingForm.valid" [ngClass]="!billingForm.valid ? 'opacity-50' : 'hover:bg-primary-50'"
+                    class="m-2 flex w-fit justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-primary-100  focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
+                {{ 'BILLING._update' | translate }}
+            </button>
         }
-
     </div>
   </form>
 
