--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -44,46 +44,17 @@
           <label class="sr-only" id="billing-addresses-label" role="none">Billing Address</label>
           @if (billingAddresses.length > 0) {
             <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-3" role="none">
-              @for(baddr of billingAddresses; track baddr.id) {
-                <app-billing-address [data]="baddr" (selectedEvent)="onSelected($event)" (deletedEvent)="onDeleted($event)"></app-billing-address>
+              @for(baddr of billingAddresses; track baddr.id; let pos = $index) {
+                <app-billing-address [data]="baddr" [position]="pos" (selectedEvent)="onSelected($event)" (deletedEvent)="onDeleted($event)"></app-billing-address>
               }
             </div>
           } @else {
-            <form novalidate="" class="grid h-full grid-cols-2 gap-5">
-              <div class="col-span-2"><label for="title"
-                                             class="mb-3 block text-sm font-semibold leading-none text-body-dark">Title</label><input
-                id="title" name="title" type="text"
-                class="flex w-full appearance-none items-center px-4 text-sm text-heading transition duration-300 ease-in-out focus:outline-0 focus:ring-0 border border-border-base rounded focus:border-accent h-12"
-                autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" aria-invalid="false"></div>
-              <div><label for="address.country" class="mb-3 block text-sm font-semibold leading-none text-body-dark">Country</label><input
-                id="address.country" name="address.country" type="text"
-                class="flex w-full appearance-none items-center px-4 text-sm text-heading transition duration-300 ease-in-out focus:outline-0 focus:ring-0 border border-border-base rounded focus:border-accent h-12"
-                autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" aria-invalid="false"></div>
-              <div><label for="address.city"
-                          class="mb-3 block text-sm font-semibold leading-none text-body-dark">City</label><input
-                id="address.city" name="address.city" type="text"
-                class="flex w-full appearance-none items-center px-4 text-sm text-heading transition duration-300 ease-in-out focus:outline-0 focus:ring-0 border border-border-base rounded focus:border-accent h-12"
-                autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" aria-invalid="false"></div>
-              <div><label for="address.state"
-                          class="mb-3 block text-sm font-semibold leading-none text-body-dark">State / Province</label><input
-                id="address.state" name="address.state" type="text"
-                class="flex w-full appearance-none items-center px-4 text-sm text-heading transition duration-300 ease-in-out focus:outline-0 focus:ring-0 border border-border-base rounded focus:border-accent h-12"
-                autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" aria-invalid="false"></div>
-              <div><label for="address.zip"
-                          class="mb-3 block text-sm font-semibold leading-none text-body-dark">ZIP / Postal Code</label><input
-                id="address.zip" name="address.zip" type="text"
-                class="flex w-full appearance-none items-center px-4 text-sm text-heading transition duration-300 ease-in-out focus:outline-0 focus:ring-0 border border-border-base rounded focus:border-accent h-12"
-                autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" aria-invalid="false"></div>
-              <div class="col-span-2"><label for="address.street_address"
-                                             class="mb-3 block text-sm font-semibold leading-none text-body-dark">Street
-                Address</label><textarea id="address.street_address" name="address.street_address"
-                                         class="flex w-full appearance-none items-center rounded px-4 py-3 text-sm text-heading transition duration-300 ease-in-out focus:outline-0 focus:ring-0 border border-border-base focus:border-accent"
-                                         autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"
-                                         rows="4"></textarea></div>
+            <app-billing-account-form></app-billing-account-form>
+            <!--
               <button class="inline-flex items-center justify-center shrink-0 font-semibold leading-none rounded outline-none transition duration-300 ease-in-out focus:outline-0 focus:shadow focus:ring-1 focus:ring-accent-700 bg-primary-50 text-white border border-transparent hover:bg-primary-100 px-5 py-0 h-12 w-full col-span-2">
                 Add Billing Address
               </button>
-            </form>
+            -->
           }
         </div>
       </div>
