--- a/src/app/pages/checkout/billing-address/billing-address.component.html
+++ b/src/app/pages/checkout/billing-address/billing-address.component.html
@@ -4,14 +4,14 @@
     <p class="text-sm text-sub-heading">{{ data.postalAddress.street }}, {{ data.postalAddress.postCode }}, {{ data.postalAddress.city}}, {{ data.postalAddress.stateOrProvince }}, {{ data.postalAddress.country }}</p>
     <div
       class="absolute top-4 flex space-x-2 opacity-0 group-hover:opacity-100 right-4">
-      <button class="flex h-5 w-5 items-center justify-center rounded-full bg-accent text-light"><span
+      <button (click)="editBill=true;$event.stopPropagation();" class="flex h-5 w-5 items-center justify-center rounded-full bg-accent text-light"><span
         class="sr-only">Edit</span>
         <svg class="h-3 w-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
           <path
             d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z"></path>
         </svg>
       </button>
-      <button class="flex h-5 w-5 items-center justify-center rounded-full bg-red-600 text-light" [attr.data-modal-target]="'popup-modal_'+position" [attr.data-modal-toggle]="'popup-modal_'+position">
+      <button (click)="deleteBill=true;$event.stopPropagation();" class="flex h-5 w-5 items-center justify-center rounded-full bg-red-600 text-light">
         <span class="sr-only">Delete</span>
         <svg class="h-3 w-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
           <path fill-rule="evenodd"
@@ -23,6 +23,117 @@
   </div>
 </div>
 
+<!-- BILL ADDRESS EDIT modal -->
+@if (editBill){
+  <div id="edit-bill-modal" [ngClass]="editBill ? 'backdrop-blur-sm': ''" tabindex="-1" aria-hidden="true" class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full shadow-2xl">
+      <div class="w-1/2 relative bg-secondary-50 rounded-lg shadow bg-cover bg-right-bottom" (click)="$event.stopPropagation();">
+          <!-- Modal header -->
+          <div class="flex items-center justify-between pr-2 pt-2 rounded-t dark:border-gray-600">
+              <h5 class="text-xl ml-4 mr-4 font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{ 'BILLING._edit' | translate }}:</h5>
+              <button (click)="editBill=false;" type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="edit-bill-modal">
+                  <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+                      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+                  </svg>
+                  <span class="sr-only">{{ 'CARD._close' | translate }}</span>
+              </button>
+          </div>
+          <!-- Modal body -->
+          <div class="w-full h-full">                
+             <app-billing-account-form [billAcc]="data"></app-billing-account-form>
+          </div>
+      </div>
+  </div>
+}
+
+<!-- BILL ADDRESS DELETE modal -->
+@if (deleteBill){
+  <div id="delete-bill-modal" [ngClass]="deleteBill ? 'backdrop-blur-sm': ''" tabindex="-1" aria-hidden="true" class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full shadow-2xl">
+      <div class="w-1/2 relative bg-secondary-50 rounded-lg shadow bg-cover bg-right-bottom" (click)="$event.stopPropagation();">
+          <!-- Modal header -->
+          <div class="flex items-center justify-between pr-2 pt-2 rounded-t dark:border-gray-600">
+              <h5 class="text-xl ml-4 mr-4 font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{ 'BILLING._confirm_delete' | translate }}</h5>
+              <button (click)="deleteBill=false;" type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="delete-bill-modal">
+                  <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+                      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+                  </svg>
+                  <span class="sr-only">{{ 'CARD._close' | translate }}</span>
+              </button>
+          </div>
+          <!-- Modal body -->
+          <div class="w-full h-full">                
+              <div class="grid h-full grid-cols-2 gap-5 m-4">
+                  <div class="col-span-2">
+                      <label for="title" class="mb-3 block text-sm font-semibold leading-none text-body-dark">{{ 'BILLING._title' | translate }}</label>
+                      <p type="text" class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                          {{data.name}}
+                      </p>
+                  </div>
+                  <div>
+                      <label for="address.country" class="mb-3 block text-sm font-semibold leading-none text-body-dark">{{ 'BILLING._country' | translate }}</label>
+                      <p class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                          {{data.postalAddress.country}}
+                      </p>
+                  </div>
+                  <div>
+                      <label for="address.city" class="mb-3 block text-sm font-semibold leading-none text-body-dark">{{ 'BILLING._city' | translate }}</label>
+                      <p type="text" class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                          {{data.postalAddress.city}}
+                      </p>
+                  </div>
+                  <div>
+                      <label for="address.state" class="mb-3 block text-sm font-semibold leading-none text-body-dark">{{ 'BILLING._state' | translate }}</label>
+                      <p type="text" class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                          {{data.postalAddress.stateOrProvince}}
+                      </p>
+                  </div>
+                  <div>
+                      <label for="address.zip" class="mb-3 block text-sm font-semibold leading-none text-body-dark">{{ 'BILLING._post_code' | translate }}</label>
+                      <p type="text" class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                          {{data.postalAddress.postCode}}
+                      </p>
+                  </div>
+                  <div class="col-span-2">
+                      <label for="address.street_address" class="mb-3 block text-sm font-semibold leading-none text-body-dark">{{ 'BILLING._street' | translate }}</label>
+                      <p class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                          {{data.postalAddress.street}}
+                      </p>
+                  </div>
+                  <div class="col-span-2">
+                      <label for="email" class="mb-3 block text-sm font-semibold leading-none text-body-dark">{{ 'BILLING._email' | translate }}</label>
+                      <p type="text" class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                          {{data.email}}
+                      </p>
+                  </div>
+                  <div>
+                      <label for="phoneType" class="mb-3 block text-sm font-semibold leading-none text-body-dark">{{ 'BILLING._phone_type' | translate }}</label>
+                      <p type="text" class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                          {{data.telephoneType}}
+                      </p>
+                  </div>
+                  <div>
+                      <label for="phoneNumber" class="mb-3 block text-sm font-semibold leading-none text-body-dark">{{ 'BILLING._phone' | translate }}</label>                    
+                      <p type="text" class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                          {{data.telephoneNumber}}
+                      </p>
+                  </div>
+                  <div class="grid grid-cols-2 gap-4 w-full col-span-2">
+                      <button (click)="deleteBill=false;" class="h-12 w-full bg-primary-100 hover:bg-primary-50 items-center justify-center shrink-0 font-semibold leading-none rounded outline-none transition duration-300 ease-in-out focus:outline-0 focus:shadow focus:ring-1 focus:ring-accent-700 text-white border border-transparent">
+                          {{ 'BILLING._cancel' | translate }}
+                      </button>
+                      <button (click)="onDeletedBill(data)" class="h-12 w-full bg-red-800 hover:bg-red-600 items-center justify-center shrink-0 font-semibold leading-none rounded outline-none transition duration-300 ease-in-out focus:outline-0 focus:shadow focus:ring-1 focus:ring-accent-700 text-white border border-transparent">
+                          {{ 'BILLING._delete' | translate }}
+                      </button>
+                  </div>
+
+              </div>
+          </div>
+      </div>
+  </div>
+
+}
+
+
+<!-- ----- Rafa's modal ----- -->
 <div [attr.id]="'popup-modal_' + position" tabindex="-1" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
   <div class="relative p-4 w-full max-w-md max-h-full">
     <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
@@ -45,3 +156,4 @@
     </div>
   </div>
 </div>
+<!-- --------- -->
