--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -50,7 +50,7 @@
               }
             </div>
           } @else {
-            <app-billing-account-form></app-billing-account-form>
+            <app-billing-account-form [preferred]="true"></app-billing-account-form>
             <!--
               <button class="inline-flex items-center justify-center shrink-0 font-semibold leading-none rounded outline-none transition duration-300 ease-in-out focus:outline-0 focus:shadow focus:ring-1 focus:ring-accent-700 bg-primary-50 text-white border border-transparent hover:bg-primary-100 px-5 py-0 h-12 w-full col-span-2">
                 Add Billing Address
@@ -114,13 +114,13 @@
   </div>
 </div>
 
-<!-- BILL ADDRESS EDIT modal -->
+<!-- BILL ADDRESS ADD modal -->
 @if (addBill){
   <div id="add-bill-modal" [ngClass]="addBill ? 'backdrop-blur-sm': ''" tabindex="-1" aria-hidden="true" class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full shadow-2xl">
       <div class="w-1/2 relative bg-secondary-50 rounded-lg shadow bg-cover bg-right-bottom" (click)="$event.stopPropagation();">
           <!-- Modal header -->
           <div class="flex items-center justify-between pr-2 pt-2 rounded-t dark:border-gray-600">
-              <h5 class="text-xl ml-4 mr-4 font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{ 'BILLING._edit' | translate }}:</h5>
+              <h5 class="text-xl ml-4 mr-4 font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{ 'BILLING._add' | translate }}:</h5>
               <button (click)="addBill=false;" type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="edit-bill-modal">
                   <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
                       <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
@@ -130,7 +130,7 @@
           </div>
           <!-- Modal body -->
           <div class="w-full h-full">                
-             <app-billing-account-form ></app-billing-account-form>
+             <app-billing-account-form [preferred]="preferred"></app-billing-account-form>
           </div>
       </div>
   </div>
