--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -205,7 +205,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <h5 class="md:text-3xl lg:text-4xl m-4 font-semibold tracking-tight text-primary-100 dark:text-primary-100">New shipping address:</h5>
+                    <h5 class="md:text-3xl lg:text-4xl m-4 font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{ 'BILLING._add' | translate }}:</h5>
                     <hr class="h-px mr-4 ml-4 bg-primary-100 border-0">
                     <app-billing-account-form [preferred]="preferred"></app-billing-account-form>
                 </div>
