--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -22,7 +22,7 @@
       <a (click)="goToProductDetails(productOff)" class="cursor-pointer">
         <h5 class="text-xl font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{productOff?.name}}</h5>
       </a>
-      <div class="min-h-19 h-19 line-clamp-2 text-gray-600">{{productOff?.description}}</div>
+      <markdown class="min-h-19 h-19 line-clamp-2 text-gray-600" [data]="productOff?.description"></markdown>
       <div class="flex w-full justify-between mt-2.5 mb-5 text-gray-500 font-mono">
         <div>V: {{productOff?.version || 'latest'}}</div>
         <div class="flex items-center">
@@ -137,7 +137,7 @@
             <div class="p-4 md:p-5 grid grid-cols-3 gap-4">
               <div class="justify-start">
                   <h5 class="font-semibold tracking-tight text-lg text-primary-100 dark:text-primary-50">{{ 'CARD._prod_details' | translate }}:</h5>
-                  <div class="min-h-19 h-19 line-clamp-3 dark:text-secondary-50">{{productOff?.description}}</div>
+                  <markdown class="min-h-19 h-19 dark:text-secondary-50" [data]="productOff?.description"></markdown>
               </div>
               <div class="justify-start">
                 <h5 class="font-semibold tracking-tight text-lg text-primary-100 dark:text-primary-50">{{ 'CARD._comp_profile' | translate }}:</h5>
