--- a/src/app/pages/search-catalog/search-catalog.component.html
+++ b/src/app/pages/search-catalog/search-catalog.component.html
@@ -25,7 +25,7 @@
     </div>
   <!-- End Breadcrumb -->
   <section class="flex p-5">
-    <bae-categories-filter class="w-1/4 md:w-1/5"></bae-categories-filter>
+    <bae-categories-filter [catalogId]="catalog.id" class="w-1/4 md:w-1/5"></bae-categories-filter>
     <div class="w-3/4 md:w-4/5 pl-5 grid grid-cols-1 place-items-center sm:grid-cols-2 lg:grid-cols-3">
       @for (prod of products; track prod.id) {
         <bae-off-card [productOff]=prod class="w-full p-2"></bae-off-card>
