--- a/src/app/pages/product-inventory/product-inventory.component.html
+++ b/src/app/pages/product-inventory/product-inventory.component.html
@@ -27,11 +27,28 @@
             </div>
           } @else {
             @if(show_prods){
+              <div class="flex flex-row p-4 justify-end">
+                <!-- HEADER SEARCH BAR -->
+                <form class="max-w-lg w-1/2 pr-4 z-10">
+                      <div class="relative">
+                          <input type="search" id="search" [formControl]="searchField" class="block p-2.5 w-full z-20 text-sm text-gray-900 bg-gray-50 rounded-lg border-s-gray-50 border-s-2 border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-s-gray-700  dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:border-blue-500"
+                            placeholder="Filter products..." />
+                          <button type="submit" (click)="filterInventoryByKeywords()" class="absolute top-0 end-0 inline-flex items-center p-2.5 text-sm font-medium h-full text-white bg-primary-100 rounded-e-lg border border-blue-700 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300">
+                              <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+                                  <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
+                              </svg>                  
+                              <span class="ml-2">Search</span>
+                          </button>
+                      </div>
+                </form>
                 <!-- FILTERS -->
-                <div class="flex items-end justify-end p-4 z-20">
+                <div>
                   <button id="dropdownDefault" data-dropdown-toggle="dropdown"
-                    class="text-black dark:text-white bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-4 py-2.5 text-center inline-flex items-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
+                    class="text-black dark:text-white bg-primary-700 border border-gray-200 hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-4 py-2.5 text-center inline-flex items-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
                     type="button">
+                    <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" class="w-4 h-4 mr-2 text-gray-400" viewbox="0 0 20 20" fill="currentColor">
+                      <path fill-rule="evenodd" d="M3 3a1 1 0 011-1h12a1 1 0 011 1v3a1 1 0 01-.293.707L12 11.414V15a1 1 0 01-.293.707l-2 2A1 1 0 018 17v-5.586L3.293 6.707A1 1 0 013 6V3z" clip-rule="evenodd" />
+                    </svg>
                     Filter by state
                     <svg class="w-4 h-4 ml-2" aria-hidden="true" fill="none" stroke="currentColor" viewBox="0 0 24 24"
                       xmlns="http://www.w3.org/2000/svg">
@@ -47,41 +64,43 @@
                       <li class="flex items-center">
                         <input id="created" type="checkbox" value="" checked (change)="onStateFilterChange('created')"
                           class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500" />
-                
+
                         <label for="created" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">
                           Created
                         </label>
                       </li>
-                
+
                       <li class="flex items-center">
                         <input id="active" type="checkbox" value="" checked (change)="onStateFilterChange('active')"
                           class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500" />
-                
+
                         <label for="active" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">
                           Active
                         </label>
                       </li>
-                
+
                       <li class="flex items-center">
                         <input id="suspended" type="checkbox" value="" (change)="onStateFilterChange('suspended')"
                           class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500" />
-                
+
                         <label for="suspended" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">
                           Suspended
                         </label>
                       </li>
-                
+
                       <li class="flex items-center">
                         <input id="terminated" type="checkbox" value="" (change)="onStateFilterChange('terminated')"
                           class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500" />
-                
+
                         <label for="terminated" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">
                           Terminated
                         </label>
                       </li>
                     </ul>
                   </div>
-                </div>        
+                </div>  
+              </div>
+                      
                 <!-- END FILTERS -->
                 <div class="pl-5 grid grid-cols-1 place-items-center sm:grid-cols-2 lg:grid-cols-3 gap-4">
                     @for (prod of products; track prod.id; let idx = $index) {
