--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -137,7 +137,7 @@
             <div class="p-4 md:p-5 grid grid-cols-3 gap-4">
               <div class="justify-start">
                   <h5 class="font-semibold tracking-tight text-lg text-primary-100 dark:text-primary-50">{{ 'CARD._prod_details' | translate }}:</h5>
-                  <markdown class="min-h-19 h-19 dark:text-secondary-50" [data]="productOff?.description"></markdown>
+                  <markdown class="min-h-19 h-19 dark:text-secondary-50 line-clamp-6" [data]="productOff?.description"></markdown>
               </div>
               <div class="justify-start">
                 <h5 class="font-semibold tracking-tight text-lg text-primary-100 dark:text-primary-50">{{ 'CARD._comp_profile' | translate }}:</h5>
